@@ -9,7 +9,7 @@
 #pragma disable_warning 93
 #endif
 
-#if !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_mcs51)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_ds390) && !defined(__SDCC_mcs51)
 int fp (double a, int b)
 {
   if (a != 33 || b != 11)
@@ -21,7 +21,7 @@ int fp (double a, int b)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_hc08) && !defined(__SDCC_ds390) && !defined(__SDCC_mcs51)
+#if !defined(__SDCC_hc08) && !defined(__SDCC_s08) && !defined(__SDCC_ds390) && !defined(__SDCC_mcs51)
   int (*f) (double, int) = fp;
 
   fp (33, 11);
